M-182. Math 5th class. (#239)
* M-182. Изменения на странице пятого класса.

* M-182. Добавлены картинки и исправлена опечатка на странице пятого класса

* M-182. Изменены фотографии, чтобы были одинакового размера.

* M-182. Списки сделаны отдельно, а не внутри параграфов

--- a/math-5th-class.html
+++ b/math-5th-class.html
@@ -338,32 +338,93 @@
 			<h2 class="main"> 
 				<span class="h21">Репетитор по математике 5 класс, Минск</span>
 			</h2>
+			<div class="ck"> 
+				<img alt="Репетитор по математике пятый класс в Минске"
+					class="image1"  
+					src="images/photo/form5-1.jpg" 
+					title="Репетитор по математике пятый класс в Минске">
+				<img alt="Репетитор по математике 5 класс, Минск"
+					class="image" 
+					src="images/photo/form5-2.jpg" 
+					title="Репетитор по математике 5 класс, Минск">
+			</div>
 
 			<div id="realmain" class="zgt">
 				<p class="zgt">
-                    Переход от начальной школы ко 2-й ступени общего среднего образования нередко сложно дается ребенку. 
+                    Переход от начальной школы ко 2-й ступени общего среднего образования нередко сложно дается ребенку.
+					 Причины разные: <em>повышение требований и уровня математики в 5-м классе</em>, переход от одного учителя к 
+					 учителям-предметникам, часто – завышенная оценка в 4-м классе. Также в этом классе олимпиады выходят 
+					 на новый уровень. 
 				</p>
-                <p class="zgt">
-                    Причины разные:
+				<p class="zgt">
+                    По сути начальная школа является лишь <em>введением в математику</em>. С 5-го класса всё становится 
+					значительно серьёзнее. В начальной школе очень спокойный темп изучения предмета, много 
+					времени отводится для повторения изученного ранее материала, ребенок находится в 
+					комфортном для себя режиме. Система оценивания в начальной школе тоже максимально 
+					благоприятна для ученика. Т.к. обучение по всем предметам проводит один учитель, то 
+					нередко оценка превосходит уровень знаний.
+
                 </p>
-                <ul>
-                    <li><em>повышение требований и уровня математики в 5-м классе</em></li>
-                    <li>переход от одного учителя к учителям-предметникам</li>
-                    <li>часто – завышенная оценка в 4-м классе</li>
-                </ul>
-                <p class="zgt">
-                    Также в этом классе олимпиады выходят на новый уровень.
+				<p class="zgt">
+                   В отличие от начальной школы, <em>в пятом классе темп изучения математики значительно 
+				   ускоряется</em>, изучается <em>много новых тем</em>, появляется учитель-предметник, который не делает 
+				   никаких поблажек, ибо учеников у него много, и зарабатывать свою оценку каждому нужно 
+				   своими <em>реальными знаниями</em>. Многим детям необходимо повторение и закрепление изученного 
+				   в начальной школе.
+
+                </p>
+				<p class="zgt">
+                    В пятом классе закладывается <em>фундамент для дальнейшего изучения математики</em>. Для сильных учеников это 
+					время развития логических способностей, введения в креативную математику и освоения методов решения 
+					олимпиадных задач.
                 </p>
                 <p class="zgt">
-                    Данный раздел будет дополнен, а пока вы можете ознакомиться с общей информацией на страницах
-                    <a href="shkolnikam.html">математика для школьников</a>  или <a href="russian-language-tutor.html">репетитор по русскому языку</a>.
+                    <strong>Основные разделы:</strong>
+                </p>
+				<ol>
+					<li><em>Решение текстовых задач</em> на различные темы. Составление схем.</li>
+					<li><em>Решение уравнений</em> и решение задач с помощью уравнений.</li>
+					<li>Деление с остатком.</li>
+					<li>Делители числа. Задачи с использованием делителей числа.</li>
+					<li><em>Признаки делимости</em> на 2, 3, 4, 5, 6, 8, 9, 10 и другие.</li>
+					<li>Задачи, использующие четность и нечетность чисел.</li>
+					<li>Простые и составные числа. Взаимно простые числа.</li>
+					<li><em>НОД, НОК</em>, разложение числа на простые множители.</li>
+					<li>Понятие дроби. Обыкновенная дробь. Смешанная дробь. Перевод из одной формы в другую. 
+					Правильные и неправильные дроби.</li>
+					<li>Сложение и вычитание обыкновенных и смешанных дробей.</li>
+					<li>Умножение и деление обыкновенных и смешанных дробей.</li>
+					<li>Вычислительные примеры и уравнения, содержащие <em>все действия с дробями</em>.</li>
+				</ol>
+				<p class="zgt">
+                    <strong>Разделы для изучения математики на углубленном уровне:</strong>
+                </p>
+				<ol>
+					<li>Арифметические ребусы.</li>
+					<li><em>Множества</em>. Операции с множествами. Круги Эйлера.</li>
+					<li>Сюжетные <em>логические задачи</em>.</li>
+					<li>Истинные и ложные высказывания. Лжецы, рыцари, дипломаты.</li>
+					<li>Переливания и взвешивания</li>
+					<li><em>Принцип Дирихле.</em></li>
+					<li>Простые <em>комбинаторные задачи</em>.</li>
+					<li>Раскраски, замощения и разрезания.</li>
+					<li><em>Игровые стратегии</em> и турниры.</li>
+					<li>Использование <em>остатков от деления</em> на натуральное число в олимпиадных задачах</li>
+				</ol>
+                <p class="zgt">
+                    <a href="shkolnikam.html">Информация о ценах, условиях и формате занятий с репетитором по математике</a>.
                 </p>
                 <p class="zgt">
-                    Занятия происходят на <a href="mestopolozhenie.html">территории преподавателя</a> или <a href="pomosch_reshenii_zadach.html">дистанционно</a>.
+                    <a href="russian-language-tutor.html">Информация о репетиторе по русскому и белорусскому языкам</a>.
                 </p>
-                <p class="zgt">
-                    Также вы можете задать свой вопрос напрямую по телефонам и в мессенджерах, указанных в контактных данных.
+				<p class="zgt">
+                    <strong>Литература для занятий по математике в 5 классе:</strong>
                 </p>
+				<ul>
+					<li> Математика. 5 класс. Самостоятельные и контрольные работы. Валерий Герасимов</li>
+					<li>Сборник самостоятельных и контрольных работ по математике для 5 класса. Наталья Костюкович, О. Пирютко</li>
+					<li> Дополнительные учебные материалы и олимпиадные задания предоставляю я</li>
+				</ul>
 			</div>
 		<div class="clear"></div>
 	</div>
